--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <div class="about-wrapper__info">
                     <p class="about-wrapper__info-text">
-                              WOHOOO SINGLE BOIYYY, and i want wandering in earth till dead love MEEE!!
+                              WOHOOO SINGLE BOIYYY, and i want wandering in earth till dead love MEEE!! sumpah selanjutnya kaga usah dibaca demi ga penting amat dah ya gausah dibaca
                               <div class="about-wrapper__info">
                                 <iframe width="300" height="300" src="https://www.youtube.com/embed/6Y2MBIWfGMc?si=EvN08xrHzVmwOcYK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
                     </p>
