--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>perayaan mati rasa</title>
 
-    <meta name="title" content="Hi, I'm Radhit yea blabla whatever.">
+    <meta name="title" content="Hi, I'm.">
     <meta name="description" content="Just an exedentasist.">
     <meta name="keywords" content=" ">
     <meta name="theme-color" content="#9e9e9e">
@@ -17,10 +17,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bio-v2.aneekbiswas5.repl.co/">
     <meta property="og:site_name" content="  Aneek | Portfolio">
-    <meta property="og:title" content="👋 Hi, I'm Radhit.">
+    <meta property="og:title" content="👋 Hi, I'm.">
     <meta property="og:description" content="Just an wanderer.">
     <meta property="og:image" itemprop="image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjFlk2Xye4a3iZI1gYad-ewFIsWRuGyozTTaB8K440Ng&s">
-    <meta property="og:image:secure_url" itemprop="image" content="<iframe width="560" height="315" src="https://www.youtube.com/embed/DjocrCuXN-w?si=l-qW8xWsbqnUCVMT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
+    <meta property="og:image:secure_url" itemprop="image" content="<iframe width="560" height="315" src="https://www.youtube.com/embed/KRhyb2RRRb8?si=Mlz1frHnDNHEDIWi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
@@ -44,7 +44,7 @@
             <!-- Navbar Links -->
             <ul id="menu">
                 <li><a href="#hero">Home</a></li>
-                <li><a href="#about">Tentang</a></li>
+                <li><a href="#about">-----</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -60,7 +60,7 @@
     <div class="overlay-menu">
         <ul id="menu">
             <li><a href="#hero">Home</a></li>
-            <li><a href="#about">Tentang</a></li>
+            <li><a href="#about">----</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -69,7 +69,7 @@
     <div id="hero">
         <section class="container">
             <h1 class="hero-title">
-                    Selamat datang  <span class="text-color-main">To The MOON</span>
+                     <span class="text-color-main">To The MOON</span>
                 <br> <span class="typed"> <span id="typed"></span> </span>
             </h1>
             <p class="hero-cta">
@@ -90,7 +90,7 @@
 
                 <div class="about-wrapper__info">
                     <p class="about-wrapper__info-text">
-                              WOHOOO SINGLE BOIYYY, and i want wandering in earth till dead love MEEE!! sumpah selanjutnya kaga usah dibaca demi ga penting amat dah ya gausah dibaca
+                              
                               <div class="about-wrapper__info">
                                 <iframe width="300" height="300" src="https://www.youtube.com/embed/6Y2MBIWfGMc?si=EvN08xrHzVmwOcYK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
                     </p>
@@ -138,10 +138,9 @@
                     <div class="project-wrapper__text">
                         <h3 class="project-wrapper__text-title">Most Important</h3>
                         <p class="project-wrapper__text-info">
-                            I have 999 plans untuk mendapatkan hatimu
-                        <br> god says no, plan ku aggal semua breh
-                        When we're apart, my heart breaks, but you are OPIUMM TO MEEE
-                        <br>saya pikir inilah saatnya saya menjadi ultraman gaia
+                            
+                        <br> god says no,
+                        <br>
                         </p>
                         <div class="project-wrapper__text-btns">
                             <a href="#" target="_blank" rel="noopener noreferrer"
