--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                     <p class="about-wrapper__info-text">
                               
                               <div class="about-wrapper__info">
-                                <iframe width="300" height="300" src="https://www.youtube.com/embed/6Y2MBIWfGMc?si=EvN08xrHzVmwOcYK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+                               <iframe width="560" height="315" src="https://www.youtube.com/embed/KRhyb2RRRb8?si=Mlz1frHnDNHEDIWi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </p>
                     <p class="about-wrapper__info-text">
-                              Saya suka Mahira Kanis, dan juga nasi padang<br>
-                              dear love apa ya, ah paling gada yang baca ginian kagak penting 
+                              mahira kanis be mine<br>
+                           
                     </p>
 
                     <span class="about-wrapper__cta">
