--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>perayaan mati rasa</title>
+    <title>im also skilled you know</title>
 
     <meta name="title" content="Hi, I'm.">
     <meta name="description" content="Just an exedentasist.">
@@ -37,7 +37,7 @@
     <nav id="navbar" class="">
         <div class="nav-wrapper">
             <div class="logo">
-                <a href="#hero"><i class=""></i><img width="150px" height="60px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSamquygyySl2tMtn8lnbw5lQoOFn8Min0xNJh-tpNykQUwRwRXnhd8Sc3ZSuj0IJF4js&usqp=CAU"
+                <a href="#hero"><i class=""></i><img width="150px" height="60px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjFlk2Xye4a3iZI1gYad-ewFIsWRuGyozTTaB8K440Ng&sU"
                         alt="aneebio.vercel.app"></a>
             </div>
 
