--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>im also skilled you know</title>
+    <title>im also skilled</title>
 
     <meta name="title" content="Hi, I'm.">
     <meta name="description" content="Just an exedentasist.">
